classDiagram
    class User {
        +int id
        +string username
        +string password
        +string email
        +__str__() string
    }
    class Child {
        +int id
        +string child_name
        +int sleep_average
        +int treatment_id
        +int time
    }
    class Tap {
        +int id
        +int child_id
        +int status_id
        +int user_id
        +string init
        +string end
    }
    class Status {
        +int id
        +string name
    }
    class Role {
        +int id
        +string type_rol
    }
    class Treatment {
        +int id
        +string name
    }
    User -- Child : has
    User -- Tap : registers
    Child -- Tap : has
    Tap -- Status : has
    Child -- Treatment : follows
    User -- Role : has
